--- a/directbak.yaml
+++ b/directbak.yaml
@@ -614,7 +614,6 @@ payload:
   - '+.0x6.me'
   - '+.0x7.me'
   - '+.0x9.me'
-  - '+.0x91.com'
   - '+.0xaa55.com'
   - '+.0xff000000.com'
   - '+.0xffffff.org'
@@ -702,7 +701,6 @@ payload:
   - '+.100msh.net'
   - '+.100niangudu.com'
   - '+.100njz.com'
-  - '+.100nkrc.com'
   - '+.100nong.com'
   - '+.100pd.com'
   - '+.100ppi.com'
@@ -715,7 +713,6 @@ payload:
   - '+.100t.com'
   - '+.100tal.com'
   - '+.100tmt.com'
-  - '+.100toutiao.com'
   - '+.100try.com'
   - '+.100txy.com'
   - '+.100ulife.com'
@@ -1572,7 +1569,6 @@ payload:
   - '+.17ziti.com'
   - '+.17zixue.com'
   - '+.17zjh.com'
-  - '+.17zlsm.com'
   - '+.17zub.com'
   - '+.17zuoye.com'
   - '+.17zuoye.net'
@@ -3892,7 +3888,6 @@ payload:
   - '+.51pinwei.com'
   - '+.51pjys.com'
   - '+.51pla.com'
-  - '+.51plain.com'
   - '+.51pocket.com'
   - '+.51pocket.net'
   - '+.51pos.com'
@@ -4348,7 +4343,6 @@ payload:
   - '+.52xitong.com'
   - '+.52xiuxian.com'
   - '+.52xiyou.com'
-  - '+.52xp.net'
   - '+.52xyz.com'
   - '+.52yawa.com'
   - '+.52yh.com'
@@ -4422,7 +4416,6 @@ payload:
   - '+.5490196.cc'
   - '+.5499.com'
   - '+.54benniao.com'
-  - '+.54bt.com'
   - '+.54doctor.net'
   - '+.54doctors.net'
   - '+.54hcz.com'
@@ -4669,7 +4662,6 @@ payload:
   - '+.58yiji.com'
   - '+.58youtui.com'
   - '+.58yuanlin.com'
-  - '+.58yuefu.com'
   - '+.58yuesao.com'
   - '+.58zhuiju.com'
   - '+.59.com'
@@ -5245,7 +5237,6 @@ payload:
   - '+.6bdns.com'
   - '+.6c6c.com'
   - '+.6cang.com'
-  - '+.6ccn.com'
   - '+.6cit.com'
   - '+.6cnzz.com'
   - '+.6d4d5.com'
@@ -5685,6 +5676,7 @@ payload:
   - '+.7su.com'
   - '+.7t9.com'
   - '+.7tapp.com'
+  - '+.7tenet.net'
   - '+.7tgame.com'
   - '+.7tou.com'
   - '+.7tt3333.com'
@@ -5709,7 +5701,6 @@ payload:
   - '+.7y5.net'
   - '+.7yc.com'
   - '+.7youxi.com'
-  - '+.7yue.pro'
   - '+.7yueji.com'
   - '+.7yun.com'
   - '+.7yz.com'
@@ -5790,7 +5781,6 @@ payload:
   - '+.80xs.la'
   - '+.80ym.com'
   - '+.80zhan.com'
-  - '+.8104510.com'
   - '+.810840.com'
   - '+.810book.com'
   - '+.812361.com'
@@ -6533,7 +6523,6 @@ payload:
   - '+.93zw.com'
   - '+.940177.com'
   - '+.941.so'
-  - '+.941mg.com'
   - '+.942ss.com'
   - '+.944.com'
   - '+.94445.com'
@@ -6881,7 +6870,6 @@ payload:
   - '+.9air.com'
   - '+.9aoduo.com'
   - '+.9aola.com'
-  - '+.9av5m.com'
   - '+.9beike.com'
   - '+.9bianli.com'
   - '+.9cb.com'
@@ -7261,7 +7249,6 @@ payload:
   - '+.adapay.tech'
   - '+.adarrive.com'
   - '+.adaxin.com'
-  - '+.adbats.com'
   - '+.adbkwai.com'
   - '+.adbxb.com'
   - '+.adc-expo.com'
@@ -9074,7 +9061,6 @@ payload:
   - '+.atianqi.com'
   - '+.atido.com'
   - '+.ating.info'
-  - '+.atjiang.com'
   - '+.atmbox.com'
   - '+.atmlimited.com'
   - '+.atmob.com'
@@ -9217,7 +9203,6 @@ payload:
   - '+.avtt830.com'
   - '+.aw-ol.com'
   - '+.aw.cc'
-  - '+.aw99.com'
   - '+.awaimai.com'
   - '+.awaker.net'
   - '+.awaliwa.com'
@@ -10241,7 +10226,6 @@ payload:
   - '+.benber-tech.com'
   - '+.benber.com'
   - '+.benbun.com'
-  - '+.benchami.com'
   - '+.bendi5.com'
   - '+.bendibao.com'
   - '+.bendiso.com'
@@ -10390,8 +10374,6 @@ payload:
   - '+.bfyx.com'
   - '+.bfyx.net'
   - '+.bg-cs.com'
-  - '+.bg.v4.a.dl.ws.microsoft.com'
-  - '+.bg4.v4.a.dl.ws.microsoft.com'
   - '+.bgbk.org'
   - '+.bgctv.com'
   - '+.bgdeco.com'
@@ -10556,7 +10538,6 @@ payload:
   - '+.biguo100.com'
   - '+.biguolunwen.com'
   - '+.bigwayseo.com'
-  - '+.bigweekendcalendar.com'
   - '+.bigwinepot.com'
   - '+.bigwww.com'
   - '+.bigxiao.com'
@@ -11520,7 +11501,6 @@ payload:
   - '+.bozhihua.com'
   - '+.bozhong.com'
   - '+.bpfqmg7.xyz'
-  - '+.bphetaomiao.com'
   - '+.bpimg.com'
   - '+.bppan.com'
   - '+.bpqwxsh.com'
@@ -11542,7 +11522,6 @@ payload:
   - '+.bqrdh.com'
   - '+.bqteng.com'
   - '+.bragood.com'
-  - '+.braincf.com'
   - '+.brand4x4.com'
   - '+.brandcn.com'
   - '+.brandpano.com'
@@ -11697,7 +11676,6 @@ payload:
   - '+.budaism.com'
   - '+.budao.com'
   - '+.budao24.com'
-  - '+.buddhalikedoge.com'
   - '+.budhano.com'
   - '+.buding.tv'
   - '+.budingmore.com'
@@ -12160,7 +12138,6 @@ payload:
   - '+.cainiaobaoka.com'
   - '+.cainiaojc.com'
   - '+.cainiaojiaocheng.com'
-  - '+.cainiaoqidian.com'
   - '+.cainiaoxueyuan.com'
   - '+.cainongnet.com'
   - '+.caipiaogu.com'
@@ -14332,7 +14309,6 @@ payload:
   - '+.chishoes.com'
   - '+.chitanda.me'
   - '+.chitu.com'
-  - '+.chitu107.com'
   - '+.chitus.com'
   - '+.chivast.com'
   - '+.chivox.com'
@@ -16136,7 +16112,6 @@ payload:
   - '+.cqgz.com'
   - '+.cqh2o.com'
   - '+.cqhansa.com'
-  - '+.cqhaotang.com'
   - '+.cqhcbk.com'
   - '+.cqhimalayanky.com'
   - '+.cqhkcdns.com'
@@ -16757,7 +16732,6 @@ payload:
   - '+.cy-isp.net'
   - '+.cy-jm.com'
   - '+.cy.com'
-  - '+.cy1990.com'
   - '+.cy2009.com'
   - '+.cy52.com'
   - '+.cy580.com'
@@ -16767,7 +16741,6 @@ payload:
   - '+.cyanhillcapital.com'
   - '+.cyb-bot.com'
   - '+.cyb-cie.com'
-  - '+.cyb520.com'
   - '+.cyb800.com'
   - '+.cyberfunn.xyz'
   - '+.cyberway-china.net'
@@ -16815,6 +16788,7 @@ payload:
   - '+.cypresstel.com'
   - '+.cyprestar.com'
   - '+.cyqyzx.com'
+  - '+.cyr168.com'
   - '+.cyruc.com'
   - '+.cysq.com'
   - '+.cyss19.com'
@@ -17374,7 +17348,6 @@ payload:
   - '+.davtd.com'
   - '+.davvar.com'
   - '+.dawaner.net'
-  - '+.daweibro.com'
   - '+.daweisoft.com'
   - '+.dawenming.com'
   - '+.dawenxue.net'
@@ -17563,7 +17536,6 @@ payload:
   - '+.ddlequ.com'
   - '+.ddmap.com'
   - '+.ddmer.com'
-  - '+.ddmini.com'
   - '+.ddnddn.com'
   - '+.ddns-only.xyz'
   - '+.ddnsto.com'
@@ -17735,6 +17707,7 @@ payload:
   - '+.dengwz.com'
   - '+.dengxiaolong.com'
   - '+.dengxiaopingnet.com'
+  - '+.denopark.com'
   - '+.dentistshow.com'
   - '+.deosin.com'
   - '+.dep-star.com'
@@ -18691,7 +18664,6 @@ payload:
   - '+.dongbucaijing.com'
   - '+.dongcai.net'
   - '+.dongcaibaoxian.com'
-  - '+.dongchaba.com'
   - '+.dongchedi.com'
   - '+.dongcheng1.com'
   - '+.dongcheng100.com'
@@ -20313,7 +20285,6 @@ payload:
   - '+.embsky.com'
   - '+.emcbj.com'
   - '+.emcsosin.com'
-  - '+.emdl.ws.microsoft.com'
   - '+.emea.cdnetworks.com'
   - '+.emeixs.com'
   - '+.emen.ltd'
@@ -20384,7 +20355,6 @@ payload:
   - '+.enjoymeet.com'
   - '+.enjoyyue.com'
   - '+.enjoyz.com'
-  - '+.enkeco.com'
   - '+.enkichen.com'
   - '+.enkiorder.com'
   - '+.enkj.com'
@@ -21170,7 +21140,6 @@ payload:
   - '+.fanli001.net'
   - '+.fanlibei.com'
   - '+.fanlicome.com'
-  - '+.fanligame.com'
   - '+.fanlihe.com'
   - '+.fanlijinfu.com'
   - '+.fanlisaas.com'
@@ -21721,6 +21690,7 @@ payload:
   - '+.fidding.me'
   - '+.fiehff.com'
   - '+.fieldschina.com'
+  - '+.fifo.cc'
   - '+.fifsky.com'
   - '+.figoc.pw'
   - '+.fiinote.com'
@@ -22658,7 +22628,6 @@ payload:
   - '+.g80mx.com'
   - '+.g88885555.com'
   - '+.g88886666.com'
-  - '+.g8f8.com'
   - '+.g931.com'
   - '+.ga001.com'
   - '+.ga002.com'
@@ -22904,6 +22873,7 @@ payload:
   - '+.gaotu006.club'
   - '+.gaotu100.com'
   - '+.gaotuxueyuan.com'
+  - '+.gaowoip.com'
   - '+.gaoxiaobang.com'
   - '+.gaoxiaojob.com'
   - '+.gaoxin123.com'
@@ -23576,7 +23546,6 @@ payload:
   - '+.glxlawyer.com'
   - '+.glzip.com'
   - '+.glzj88.com'
-  - '+.glzy8.com'
   - '+.gm193.com'
   - '+.gm2007.com'
   - '+.gm825.com'
@@ -24473,7 +24442,6 @@ payload:
   - '+.guyuenglish.com'
   - '+.guyungame.com'
   - '+.guyut.com'
-  - '+.guzalim.com'
   - '+.guzaosf.com'
   - '+.guzhangting.com'
   - '+.guzhifengds.com'
@@ -24832,7 +24800,6 @@ payload:
   - '+.h3wog.com'
   - '+.h3yun.com'
   - '+.h4.cc'
-  - '+.h41s.com'
   - '+.h4532.com'
   - '+.h4kdxs.com'
   - '+.h5-share.com'
@@ -25471,6 +25438,7 @@ payload:
   - '+.happylivelife.com'
   - '+.happymath2009.org'
   - '+.happymmall.com'
+  - '+.happynic.com'
   - '+.happypingpang.com'
   - '+.happyplaygame.net'
   - '+.happyroll.net'
@@ -29102,7 +29070,6 @@ payload:
   - '+.ihaier.com'
   - '+.ihaima.com'
   - '+.ihaiu.com'
-  - '+.ihalf.co'
   - '+.ihanbridge.com'
   - '+.ihang360.com'
   - '+.ihanghai.com'
@@ -29306,7 +29273,6 @@ payload:
   - '+.ilifesmart.com'
   - '+.ilinekesy.com'
   - '+.ilingdai.com'
-  - '+.ilinkee.com'
   - '+.ilinki.net'
   - '+.ilinkone.com'
   - '+.ilinux.xyz'
@@ -29334,7 +29300,6 @@ payload:
   - '+.ilovezuan.com'
   - '+.ilsungf.com'
   - '+.ilufan.com'
-  - '+.iluoy.com'
   - '+.iluoyang.com'
   - '+.iluqi.com'
   - '+.ilustrepro.com'
@@ -29904,7 +29869,6 @@ payload:
   - '+.iqinbao.com'
   - '+.iqing.com'
   - '+.iqingdao.com'
-  - '+.iqingren.com'
   - '+.iqingua.com'
   - '+.iqishu.la'
   - '+.iqiwx.com'
@@ -30142,7 +30106,6 @@ payload:
   - '+.itek-training.com'
   - '+.itelly.net'
   - '+.itellyou.com'
-  - '+.itemj.com'
   - '+.itensoft.com'
   - '+.iter168.com'
   - '+.itest.info'
@@ -30372,7 +30335,6 @@ payload:
   - '+.iwyvi.com'
   - '+.iwzwy.com'
   - '+.ixbren.net'
-  - '+.ixcv.com'
   - '+.ixdc.org'
   - '+.ixfc.net'
   - '+.ixiangyu.com'
@@ -31200,7 +31162,6 @@ payload:
   - '+.jiecao.com'
   - '+.jiedaibao.com'
   - '+.jiediankeji.com'
-  - '+.jieennet.com'
   - '+.jiefadg.com'
   - '+.jiefuku.com'
   - '+.jiegames.com'
@@ -31509,7 +31470,6 @@ payload:
   - '+.jinmuinfo.com'
   - '+.jinnianduoda.com'
   - '+.jinnong.cc'
-  - '+.jinpengeye.com'
   - '+.jinphui.com'
   - '+.jinqiexia.com'
   - '+.jinqunla.com'
@@ -32159,6 +32119,7 @@ payload:
   - '+.jpwind.com'
   - '+.jpwindow.com'
   - '+.jpwxapp.com'
+  - '+.jpxue.com'
   - '+.jpxzm.com'
   - '+.jpyoo.com'
   - '+.jpyssc.com'
@@ -33098,13 +33059,13 @@ payload:
   - '+.kanman.com'
   - '+.kanmeinv.com'
   - '+.kannb.com'
+  - '+.kanpula.com'
   - '+.kanqibao.com'
   - '+.kanqiye.com'
   - '+.kanqq.com'
   - '+.kanqu.com'
   - '+.kansdk.com'
   - '+.kansea.com'
-  - '+.kanshaa.com'
   - '+.kanshangji.com'
   - '+.kanshangjie.com'
   - '+.kanshu.com'
@@ -33173,7 +33134,6 @@ payload:
   - '+.kaoyanzhijia.org'
   - '+.kaoyaya.com'
   - '+.kaozhiye.com'
-  - '+.kapai8.com'
   - '+.kaquanbao.com'
   - '+.kargocard.com'
   - '+.karlzhou.com'
@@ -33561,7 +33521,6 @@ payload:
   - '+.kiwa-tech.com'
   - '+.kiwenlau.com'
   - '+.kiwisec.com'
-  - '+.kj-hospital.com'
   - '+.kj-pcb.com'
   - '+.kj1d.com'
   - '+.kj3.com'
@@ -34158,7 +34117,6 @@ payload:
   - '+.kukulv.com'
   - '+.kukumai.com'
   - '+.kukupig.com'
-  - '+.kukushouyou.com'
   - '+.kukushow.com'
   - '+.kukuspeak.com'
   - '+.kukuw.com'
@@ -34270,7 +34228,6 @@ payload:
   - '+.kvhdd.com'
   - '+.kvhee.com'
   - '+.kvhmm.com'
-  - '+.kvhnn.com'
   - '+.kviso.com'
   - '+.kvkaa.com'
   - '+.kvmaa.com'
@@ -34320,7 +34277,6 @@ payload:
   - '+.kxtseal.net'
   - '+.kxtui.com'
   - '+.kxtwz.com'
-  - '+.kxvuv.com'
   - '+.kxx2.com'
   - '+.kxxsc.com'
   - '+.kxxxl.com'
@@ -35892,7 +35848,6 @@ payload:
   - '+.liunian.info'
   - '+.liunianbanxia.com'
   - '+.liushidong.com'
-  - '+.liushuba.com'
   - '+.liusuping.com'
   - '+.liut.xyz'
   - '+.liuts.com'
@@ -36426,7 +36381,6 @@ payload:
   - '+.lovev.com'
   - '+.lovewith.me'
   - '+.lovewj.info'
-  - '+.lovezhangjunning.com'
   - '+.lovezhuoyou.com'
   - '+.lovfp.com'
   - '+.lovgiin.com'
@@ -36655,7 +36609,6 @@ payload:
   - '+.lunzima.net'
   - '+.luobo020.com'
   - '+.luobo360.com'
-  - '+.luobocai.com'
   - '+.luobotou.org'
   - '+.luobowin8.com'
   - '+.luoboxia.com'
@@ -38482,7 +38435,6 @@ payload:
   - '+.mixunds.com'
   - '+.mixvvideo.com'
   - '+.mixwing.com'
-  - '+.miy.cc'
   - '+.miyabaobei.com'
   - '+.miyaboke.com'
   - '+.miyachat.com'
@@ -38838,7 +38790,6 @@ payload:
   - '+.momoapk.com'
   - '+.momobako.com'
   - '+.momocdn.com'
-  - '+.momoe.ml'
   - '+.momooyo.com'
   - '+.momoshifu.com'
   - '+.momotn.com'
@@ -39956,7 +39907,6 @@ payload:
   - '+.netspreading.com'
   - '+.netstatic.net'
   - '+.netsun.com'
-  - '+.nettsz.com'
   - '+.nettvl.net'
   - '+.networkbench.com'
   - '+.networkbrand.com'
@@ -40361,7 +40311,6 @@ payload:
   - '+.njycwy.com'
   - '+.njyingtaoya.com'
   - '+.njyydl.com'
-  - '+.njzb.net'
   - '+.njzdsp.com'
   - '+.njzhzx.net'
   - '+.njzztyl.com'
@@ -40876,7 +40825,6 @@ payload:
   - '+.oeob.net'
   - '+.oesell.com'
   - '+.oetsi.com'
-  - '+.of.work'
   - '+.ofcard.com'
   - '+.ofenka.com'
   - '+.offcn.com'
@@ -41080,7 +41028,6 @@ payload:
   - '+.onekeyghost.com'
   - '+.onemob.mobi'
   - '+.onemovie.com'
-  - '+.onemsdn.com'
   - '+.oneniceapp.com'
   - '+.onenoter.com'
   - '+.onephper.com'
@@ -41169,7 +41116,6 @@ payload:
   - '+.opahnet.com'
   - '+.opark.com'
   - '+.opatseg.com'
-  - '+.opcns.net'
   - '+.opcool.com'
   - '+.opd2c.com'
   - '+.opdown.com'
@@ -41373,7 +41319,6 @@ payload:
   - '+.oubk.com'
   - '+.ouchgzee.com'
   - '+.oudapay.com'
-  - '+.oudeqi.com'
   - '+.oudiscover.com'
   - '+.oueia.xyz'
   - '+.oufa-travel.com'
@@ -41883,6 +41828,7 @@ payload:
   - '+.pdd.net'
   - '+.pddcdn.com'
   - '+.pddeu.com'
+  - '+.pddim.com'
   - '+.pddjw.com'
   - '+.pddpic.com'
   - '+.pddugc.com'
@@ -42815,7 +42761,6 @@ payload:
   - '+.psd8.com'
   - '+.psdiv.com'
   - '+.pse-meti.com'
-  - '+.psgui.com'
   - '+.pshsoutlet.com'
   - '+.psing.tech'
   - '+.psjxty.com'
@@ -42945,7 +42890,6 @@ payload:
   - '+.pvc123.com'
   - '+.pvcpanel-mzq.com'
   - '+.pvkj.com'
-  - '+.pvmama.com'
   - '+.pvpin.com'
   - '+.pw1999.com'
   - '+.pw88.com'
@@ -43689,7 +43633,6 @@ payload:
   - '+.qingtengzhilian.com'
   - '+.qingtian16265.com'
   - '+.qingtiancms.net'
-  - '+.qingtin.com'
   - '+.qingting.fm'
   - '+.qingting123.com'
   - '+.qingtingfm.com'
@@ -43984,7 +43927,6 @@ payload:
   - '+.qnvod.net'
   - '+.qnydns.com'
   - '+.qnydns.net'
-  - '+.qodro.com'
   - '+.qolai.com'
   - '+.qooboo.com'
   - '+.qoocc.com'
@@ -44994,7 +44936,6 @@ payload:
   - '+.resuly.me'
   - '+.retailo2o.com'
   - '+.retalltech.com'
-  - '+.retey.net'
   - '+.retiehe.com'
   - '+.retouchpics.com'
   - '+.return.net'
@@ -45257,7 +45198,6 @@ payload:
   - '+.rongyao666.com'
   - '+.rongyi.com'
   - '+.rongyiju.com'
-  - '+.rongyitou.com'
   - '+.rongyizhaofang.com'
   - '+.rongzhitong.com'
   - '+.rongzhongleasing.com'
@@ -46723,7 +46663,6 @@ payload:
   - '+.shaoqun.com'
   - '+.shaoshilei.com'
   - '+.shaoyee.com'
-  - '+.shaozi.info'
   - '+.shaphc.org'
   - '+.shaqing.com'
   - '+.shaqm.com'
@@ -47901,7 +47840,6 @@ payload:
   - '+.sipeed.com'
   - '+.sipgl-lcl.com'
   - '+.siphrd.com'
-  - '+.sipo-hb.com'
   - '+.sipo-sc.com'
   - '+.siposchina.com'
   - '+.siqiquan.org'
@@ -47929,7 +47867,6 @@ payload:
   - '+.sitongzixun.com'
   - '+.sitrigroup.com'
   - '+.situdata.com'
-  - '+.sitylife.com'
   - '+.sivan.in'
   - '+.sivps.com'
   - '+.siwaman.com'
@@ -48562,11 +48499,9 @@ payload:
   - '+.sooyooj.com'
   - '+.sooyuu.com'
   - '+.soozhu.com'
-  - '+.sopandas.com'
   - '+.soperson.com'
   - '+.sophgo.com'
   - '+.sophiatiles.com'
-  - '+.sopuning.com'
   - '+.soq.com'
   - '+.soqicrm.com'
   - '+.soquair.com'
@@ -48635,7 +48570,6 @@ payload:
   - '+.soupan.info'
   - '+.soupf.net'
   - '+.soupingguo.com'
-  - '+.soupis.com'
   - '+.soupu.com'
   - '+.soupv.com'
   - '+.souqian.com'
@@ -50690,7 +50624,6 @@ payload:
   - '+.tenxapp.com'
   - '+.tenxcloud.com'
   - '+.tenxcloud.net'
-  - '+.teoripendidikan.com'
   - '+.teown.com'
   - '+.tepcb.com'
   - '+.tepintehui.com'
@@ -51932,7 +51865,6 @@ payload:
   - '+.tssns.net'
   - '+.tsstorry.com'
   - '+.tstdtz.com'
-  - '+.tstone.xyz'
   - '+.tswuby.com'
   - '+.tsxcx.xyz'
   - '+.tsybsmz.com'
@@ -52630,7 +52562,6 @@ payload:
   - '+.uchis.com'
   - '+.uchuanbo.com'
   - '+.ucicq.com'
-  - '+.ucinsights.com'
   - '+.ucjoy.com'
   - '+.ucloudgda.com'
   - '+.ucloudnaming.info'
@@ -52686,7 +52617,6 @@ payload:
   - '+.uepei.com'
   - '+.ueren.com'
   - '+.uestcedu.com'
-  - '+.uestcguoji.com'
   - '+.ueuz.com'
   - '+.uewaf.com'
   - '+.uf-crm.com'
@@ -53030,7 +52960,6 @@ payload:
   - '+.uqualities.com'
   - '+.uqude.com'
   - '+.uqulive.com'
-  - '+.uqyqcuq.ml'
   - '+.urart.cc'
   - '+.urbanchina.org'
   - '+.urbanmatters.com'
@@ -53860,7 +53789,6 @@ payload:
   - '+.vspk.com'
   - '+.vsppt.com'
   - '+.vsread.com'
-  - '+.vstab.com'
   - '+.vstart.net'
   - '+.vstecs.com'
   - '+.vstmv.com'
@@ -53977,7 +53905,6 @@ payload:
   - '+.w2008.store'
   - '+.w218.com'
   - '+.w2bc.com'
-  - '+.w2fzu.com'
   - '+.w2gou.com'
   - '+.w2solo.com'
   - '+.w333.com'
@@ -54410,7 +54337,6 @@ payload:
   - '+.wbdacdn.com'
   - '+.wbiao.co'
   - '+.wbiao.com'
-  - '+.wbiao6868.com'
   - '+.wbini.com'
   - '+.wbo529.com'
   - '+.wboll.com'
@@ -54725,7 +54651,6 @@ payload:
   - '+.weimobwmc.com'
   - '+.weinisongdu.com'
   - '+.weinm.com'
-  - '+.weinovel.cc'
   - '+.weio6nkoe.cyou'
   - '+.weiot.net'
   - '+.weipaitang.com'
@@ -55035,7 +54960,6 @@ payload:
   - '+.west999.com'
   - '+.westbund.com'
   - '+.westcits.com'
-  - '+.westcovinamasters.com'
   - '+.weste.net'
   - '+.westengine.com'
   - '+.westfutu.com'
@@ -55139,7 +55063,6 @@ payload:
   - '+.whalenas.com'
   - '+.whaleunique.com'
   - '+.whalipaycs.com'
-  - '+.whart.net'
   - '+.what21.com'
   - '+.whatbuytoday.com'
   - '+.whatsns.com'
@@ -55754,7 +55677,6 @@ payload:
   - '+.wmsjyun.com'
   - '+.wmsub.com'
   - '+.wmton.com'
-  - '+.wmtp.net'
   - '+.wmupd.com'
   - '+.wmvideo.com'
   - '+.wmxpro.com'
@@ -55875,7 +55797,6 @@ payload:
   - '+.wolongyoule.com'
   - '+.wolongzywcdn.com'
   - '+.wolongzywcdn2.com'
-  - '+.wolongzywcdn3.com'
   - '+.wolwo.ltd'
   - '+.wolwobiotech.com'
   - '+.womai.com'
@@ -56376,7 +56297,6 @@ payload:
   - '+.wuweijob.com'
   - '+.wuweiyou.com'
   - '+.wuwenjun.net'
-  - '+.wuwii.com'
   - '+.wuxi.com'
   - '+.wuxiairport.com'
   - '+.wuxiamh.com'
@@ -56771,7 +56691,6 @@ payload:
   - '+.xatao029.com'
   - '+.xatcrj.com'
   - '+.xatielu.com'
-  - '+.xatongsheng.net'
   - '+.xatvs.com'
   - '+.xatyds.com'
   - '+.xatzj.com'
@@ -57618,8 +57537,6 @@ payload:
   - '+.xibojiaoyu.com'
   - '+.xibsteel.com'
   - '+.xibu168.com'
-  - '+.xibulaobohui.com'
-  - '+.xibutiyu.com'
   - '+.xicaijing.com'
   - '+.xicaishe.com'
   - '+.xichu.net'
@@ -58670,7 +58587,6 @@ payload:
   - '+.xttz.com'
   - '+.xtu2.com'
   - '+.xtuan.com'
-  - '+.xtuo.net'
   - '+.xtuos.com'
   - '+.xtutoring.com'
   - '+.xtxcm.com'
@@ -59163,7 +59079,6 @@ payload:
   - '+.xz6.com'
   - '+.xz6699.com'
   - '+.xz7.com'
-  - '+.xz93.com'
   - '+.xzapi56.com'
   - '+.xzbahd.com'
   - '+.xzcblog.com'
@@ -60932,7 +60847,6 @@ payload:
   - '+.youtaidoors.com'
   - '+.youtaidu.com'
   - '+.youtak.com'
-  - '+.youte.ml'
   - '+.youthi.com'
   - '+.youtiandi.com'
   - '+.youtianli.com'
@@ -61207,7 +61121,6 @@ payload:
   - '+.ysstech.com'
   - '+.ysszzs.com'
   - '+.yst100.net'
-  - '+.yst3.com'
   - '+.ysten.com'
   - '+.ystinbox.com'
   - '+.ysug.com'
@@ -62219,7 +62132,6 @@ payload:
   - '+.zatest.com'
   - '+.zaticdn.com'
   - '+.zatxt.com'
-  - '+.zavbb.com'
   - '+.zaxdcredit.com'
   - '+.zazhiboss.com'
   - '+.zazhipu.com'
@@ -62456,7 +62368,6 @@ payload:
   - '+.zg3721.com'
   - '+.zg388.com'
   - '+.zg3china.com'
-  - '+.zg45.net'
   - '+.zgaxr.com'
   - '+.zgbenrun.com'
   - '+.zgbjyx.com'
@@ -63785,7 +63696,6 @@ payload:
   - '+.zjchina.org'
   - '+.zjchuguo.com'
   - '+.zjcic.net'
-  - '+.zjciming.com'
   - '+.zjcio.org'
   - '+.zjckw.org'
   - '+.zjcnbank.com'
