--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2372,6 +2372,7 @@ payload:
   - '+.2pcdn.com'
   - '+.2q10.com'
   - '+.2q1q.com'
+  - '+.2qupu.com'
   - '+.2r3r.com'
   - '+.2rich.net'
   - '+.2shihui.net'
@@ -3380,6 +3381,7 @@ payload:
   - '+.4779.com'
   - '+.47819.com'
   - '+.47gs.com'
+  - '+.47test.com'
   - '+.47zu.com'
   - '+.48.com'
   - '+.4846.com'
@@ -4929,7 +4931,6 @@ payload:
   - '+.608.vip'
   - '+.608082.com'
   - '+.6080d.com'
-  - '+.6080dy3.com'
   - '+.6080j.com'
   - '+.6090b.com'
   - '+.609999.xyz'
@@ -5001,6 +5002,7 @@ payload:
   - '+.636379.com'
   - '+.636935.com'
   - '+.6383.com'
+  - '+.6392.spa'
   - '+.639311.com'
   - '+.6399868.com'
   - '+.6399s5.com'
@@ -5119,6 +5121,7 @@ payload:
   - '+.66mz8.com'
   - '+.66nao.com'
   - '+.66nh.com'
+  - '+.66ov.com'
   - '+.66perfect.com'
   - '+.66play.com'
   - '+.66rjz.com'
@@ -5925,7 +5928,6 @@ payload:
   - '+.8686c.com'
   - '+.86873.com'
   - '+.86888qp.com'
-  - '+.8688dhy.com'
   - '+.8688g.com'
   - '+.86898924.vip'
   - '+.86933.com'
@@ -6704,6 +6706,7 @@ payload:
   - '+.980cje.com'
   - '+.98158.com'
   - '+.98182.com'
+  - '+.9820114.com'
   - '+.984g.com'
   - '+.985.so'
   - '+.985dh.com'
@@ -6778,6 +6781,7 @@ payload:
   - '+.998jx.com'
   - '+.9991.com'
   - '+.999120.net'
+  - '+.999136.xyz'
   - '+.999178.com'
   - '+.99934066.com'
   - '+.999777.com'
@@ -9615,6 +9619,7 @@ payload:
   - '+.bakaxl.com'
   - '+.bakbitionb.com'
   - '+.bakchoi.com'
+  - '+.bakingerp.com'
   - '+.bala.cc'
   - '+.baldc.com'
   - '+.baletu.com'
@@ -9636,7 +9641,6 @@ payload:
   - '+.bananau.com'
   - '+.bananaumbrella.com'
   - '+.bananaunder.com'
-  - '+.banassteel.com'
   - '+.banbaise.com'
   - '+.banbaowang.com'
   - '+.banciyuan.me'
@@ -9704,6 +9708,7 @@ payload:
   - '+.bankofyk.com'
   - '+.bankpublish.com'
   - '+.banksteel.com'
+  - '+.banksteeldns.com'
   - '+.bankyy.net'
   - '+.banma-inc.com'
   - '+.banma.com'
@@ -11151,9 +11156,9 @@ payload:
   - '+.blingclubs.com'
   - '+.blissmall.net'
   - '+.blizzardcn.com'
+  - '+.bljiancai.com'
   - '+.bln7.com'
   - '+.bln8.com'
-  - '+.block288.com'
   - '+.blockchain.hk'
   - '+.blockchain123.com'
   - '+.blockchainbrother.com'
@@ -11431,7 +11436,6 @@ payload:
   - '+.boqii.com'
   - '+.boqiicdn.com'
   - '+.boquxinxi.com'
-  - '+.boraid.org'
   - '+.borderlessbd.com'
   - '+.borlonclan.com'
   - '+.borninsummer.com'
@@ -11531,6 +11535,7 @@ payload:
   - '+.brentron.com'
   - '+.brg0.com'
   - '+.bricktou.com'
+  - '+.brico.zone'
   - '+.bridge-image.com'
   - '+.bridgee.net'
   - '+.brighost.com'
@@ -11981,6 +11986,7 @@ payload:
   - '+.c1channel.com'
   - '+.c1s.com'
   - '+.c2h4.org'
+  - '+.c31.fun'
   - '+.c360dn.com'
   - '+.c3acg.com'
   - '+.c3crm.com'
@@ -13095,7 +13101,6 @@ payload:
   - '+.cgnjy.com'
   - '+.cgnmc.com'
   - '+.cgnne.com'
-  - '+.cgnovo.com'
   - '+.cgonet.com'
   - '+.cgown.com'
   - '+.cgpad.com'
@@ -13305,7 +13310,6 @@ payload:
   - '+.chaoyisy.com'
   - '+.chaoyuesd.com'
   - '+.chaoyuyun.com'
-  - '+.chaozhibm.com'
   - '+.chaozhiedu.com'
   - '+.chaozhoudaily.com'
   - '+.chaozhuo.net'
@@ -14992,7 +14996,6 @@ payload:
   - '+.cmcc.in'
   - '+.cmcm.com'
   - '+.cmcm5.com'
-  - '+.cmcm55.cc'
   - '+.cmcmcdn.com'
   - '+.cmct22.com'
   - '+.cmd5.com'
@@ -15087,6 +15090,7 @@ payload:
   - '+.cn.net'
   - '+.cn.pandora.net'
   - '+.cn.vc'
+  - '+.cn.vu'
   - '+.cn.windowssearch.com'
   - '+.cn'
   - '+.cn0-6.com'
@@ -15649,6 +15653,7 @@ payload:
   - '+.cnzznn.com'
   - '+.cnzznz.com'
   - '+.co-effort.com'
+  - '+.co-farming.com'
   - '+.co-inclusion.org'
   - '+.co-mall.net'
   - '+.co188.com'
@@ -16267,7 +16272,6 @@ payload:
   - '+.creditcn.com'
   - '+.creditsailing.com'
   - '+.creditzuji.com'
-  - '+.creke.net'
   - '+.creo-support.com'
   - '+.crepcrep.com'
   - '+.crestv.com'
@@ -16296,6 +16300,7 @@ payload:
   - '+.crmg-ms.com'
   - '+.crmgz.com'
   - '+.crmip.com'
+  - '+.crmtldc.net'
   - '+.crnews.net'
   - '+.crodigy.com'
   - '+.crossingstarstudio.com'
@@ -16716,7 +16721,6 @@ payload:
   - '+.cxyfjy.com'
   - '+.cxyl.org'
   - '+.cxylfc.com'
-  - '+.cxymsg.com'
   - '+.cxyob.com'
   - '+.cxytiandi.com'
   - '+.cxyxiaowu.com'
@@ -17336,7 +17340,6 @@ payload:
   - '+.datia-inspect.com'
   - '+.datianmen.com'
   - '+.datk.anythinktech.com'
-  - '+.datongplastic.com'
   - '+.datongtaxi.com'
   - '+.datuc.com'
   - '+.dav01.com'
@@ -18163,7 +18166,6 @@ payload:
   - '+.dili360.com'
   - '+.dili365.com'
   - '+.dililitv.com'
-  - '+.dilipmohapatra.com'
   - '+.dim0.com'
   - '+.dimeng.net'
   - '+.dimensionalzone.com'
@@ -18243,6 +18245,7 @@ payload:
   - '+.discuz.chat'
   - '+.discuz.com'
   - '+.discuz.net'
+  - '+.discuz.vip'
   - '+.discuzfans.net'
   - '+.discuzlab.com'
   - '+.dishen.com'
@@ -18992,6 +18995,7 @@ payload:
   - '+.dreawer.com'
   - '+.drfvtgbyk.xyz'
   - '+.drgou.com'
+  - '+.drhcleanair.com'
   - '+.drice.cc'
   - '+.drip.im'
   - '+.dripcar.com'
@@ -20579,6 +20583,7 @@ payload:
   - '+.ession.com'
   - '+.essjj.com'
   - '+.essyy.com'
+  - '+.estock.cc'
   - '+.estory365.com'
   - '+.estrongs.com'
   - '+.estudychinese.com'
@@ -20694,7 +20699,6 @@ payload:
   - '+.evdays.com'
   - '+.eve.moe'
   - '+.eventdove.com'
-  - '+.events2.djicdn.com'
   - '+.everbaas.com'
   - '+.everdns.com'
   - '+.evereasycom.com'
@@ -20958,6 +20962,7 @@ payload:
   - '+.fabiaoqing.com'
   - '+.fabigbig.com'
   - '+.fabu114.com'
+  - '+.fabulous.plus'
   - '+.faburuanwen.com'
   - '+.facaishiyi.com'
   - '+.facang.com'
@@ -21551,7 +21556,6 @@ payload:
   - '+.fengsuniang.com'
   - '+.fengtai.tv'
   - '+.fengtalk.com'
-  - '+.fengting.io'
   - '+.fengtouwang.com'
   - '+.fengwanyx.com'
   - '+.fengwenyi.com'
@@ -23062,7 +23066,6 @@ payload:
   - '+.gdupi.com'
   - '+.gdvolunteer.net'
   - '+.gdwca.com'
-  - '+.gdwlgp.com'
   - '+.gdwlife.com'
   - '+.gdxinya.com'
   - '+.gdxxb.com'
@@ -24090,7 +24093,6 @@ payload:
   - '+.gter.net'
   - '+.gtfund.com'
   - '+.gtgres.com'
-  - '+.gth01.com'
   - '+.gtibee.com'
   - '+.gtimg.com'
   - '+.gtja-allianz.com'
@@ -24850,6 +24852,7 @@ payload:
   - '+.haawking.com'
   - '+.habadog.com'
   - '+.habbygames.com'
+  - '+.haberbank.xyz'
   - '+.hac-ker.net'
   - '+.hack-cn.com'
   - '+.hack-gov.com'
@@ -26683,7 +26686,6 @@ payload:
   - '+.hnhxxk.com'
   - '+.hniec.org'
   - '+.hniic.com'
-  - '+.hniois.com'
   - '+.hnisca.org'
   - '+.hniso.net'
   - '+.hnisvc.com'
@@ -26989,7 +26991,6 @@ payload:
   - '+.hostbbs.net'
   - '+.hostbuf.com'
   - '+.hostdie.com'
-  - '+.hostker.net'
   - '+.hostkvm.com'
   - '+.hostmonit.com'
   - '+.hostxen.com'
@@ -28025,7 +28026,6 @@ payload:
   - '+.huuhoo.com'
   - '+.huwaibbs.com'
   - '+.huwaizb.com'
-  - '+.huwang.cc'
   - '+.huway.com'
   - '+.huweihuang.com'
   - '+.huweishen.com'
@@ -28377,7 +28377,6 @@ payload:
   - '+.hzzmxsls.com'
   - '+.hzzp.com'
   - '+.hzzrmc.com'
-  - '+.hzzsbbs.com'
   - '+.hzzsfs.com'
   - '+.hzzuyin.com'
   - '+.i-27.name'
@@ -29014,7 +29013,6 @@ payload:
   - '+.ifresh.mobi'
   - '+.ifromvr.com'
   - '+.ifseclabs.com'
-  - '+.ifumanhua.net'
   - '+.ifundstore.com'
   - '+.ifunmac.com'
   - '+.ifunvip.com'
@@ -30474,6 +30472,7 @@ payload:
   - '+.jaeosc.com'
   - '+.jafeney.com'
   - '+.jajqj.com'
+  - '+.jake.team'
   - '+.jakegame.com'
   - '+.jakehu.me'
   - '+.jalorsoft.com'
@@ -32018,7 +32017,6 @@ payload:
   - '+.joinusad.com'
   - '+.joinwaylawfirm.com'
   - '+.joinwee.com'
-  - '+.jojju.com'
   - '+.jojog.com'
   - '+.jojoin.com'
   - '+.jojoreading.com'
@@ -32863,7 +32861,6 @@ payload:
   - '+.k18.com'
   - '+.k18882.com'
   - '+.k1u.com'
-  - '+.k259.com'
   - '+.k2938.com'
   - '+.k2ma.com'
   - '+.k2os.com'
@@ -34388,6 +34385,7 @@ payload:
   - '+.lagowang.com'
   - '+.lahm2018.com'
   - '+.lahuashanbx.com'
+  - '+.lahuobao56.com'
   - '+.lai-ai.com'
   - '+.laiba.shop'
   - '+.laibeiparking.com'
@@ -34765,6 +34763,7 @@ payload:
   - '+.lc123.net'
   - '+.lc77.com'
   - '+.lc787.com'
+  - '+.lcatgame.com'
   - '+.lcbdf.net'
   - '+.lcbtv.com'
   - '+.lccareer.com'
@@ -36961,6 +36960,7 @@ payload:
   - '+.m1ok.com'
   - '+.m1page.com'
   - '+.m1world.com'
+  - '+.m1xia.com'
   - '+.m2ez.com'
   - '+.m2mzy.com'
   - '+.m3guo.com'
@@ -37650,7 +37650,6 @@ payload:
   - '+.megaemoji.com'
   - '+.megajoy.com'
   - '+.megenie.com'
-  - '+.megoal.org'
   - '+.megobike.com'
   - '+.megomap.com'
   - '+.megou8.com'
@@ -37735,7 +37734,6 @@ payload:
   - '+.meilidongnanya.com'
   - '+.meilijia.com'
   - '+.meiling.com'
-  - '+.meiliqueen.com'
   - '+.meilishuo.com'
   - '+.meilishuo.net'
   - '+.meilisite.com'
@@ -40314,6 +40312,7 @@ payload:
   - '+.njzdsp.com'
   - '+.njzhzx.net'
   - '+.njzztyl.com'
+  - '+.nkjwtd.com'
   - '+.nkscdn.com'
   - '+.nktxv.com'
   - '+.nkyp.com'
@@ -40566,7 +40565,6 @@ payload:
   - '+.ntflk.com'
   - '+.ntfsformac.cc'
   - '+.nthfw.com'
-  - '+.nthljxzz.com'
   - '+.nthysp.com'
   - '+.ntjob88.com'
   - '+.ntjoy.com'
@@ -40675,6 +40673,7 @@ payload:
   - '+.nxgjbyy.com'
   - '+.nxgqt.org'
   - '+.nxgtjt.com'
+  - '+.nxhh.net'
   - '+.nxin.com'
   - '+.nxist.com'
   - '+.nxit.us'
@@ -41218,6 +41217,7 @@ payload:
   - '+.oraycn.com'
   - '+.orayer.com'
   - '+.orayimg.com'
+  - '+.oraytek.com'
   - '+.orbitmes.com'
   - '+.orcadt.com'
   - '+.orchome.com'
@@ -44730,6 +44730,7 @@ payload:
   - '+.reachace.com'
   - '+.react-china.org'
   - '+.react.mobi'
+  - '+.read.guru'
   - '+.read678.com'
   - '+.readboy.com'
   - '+.readceo.com'
@@ -45116,6 +45117,7 @@ payload:
   - '+.rnfengwo.com'
   - '+.rngtest.com'
   - '+.rnhqxh.com'
+  - '+.rno.xyz'
   - '+.ro4.cc'
   - '+.ro50.com'
   - '+.road-group.com'
@@ -46482,7 +46484,6 @@ payload:
   - '+.shachong8.com'
   - '+.shacumox.com'
   - '+.shaddockfishing.com'
-  - '+.shadowedu.net'
   - '+.shadowq.com'
   - '+.shaduizi.com'
   - '+.shafa.com'
@@ -47858,6 +47859,7 @@ payload:
   - '+.sisuoyun.com'
   - '+.siswin.com'
   - '+.site-digger.com'
+  - '+.site119.com'
   - '+.siteapp-static.com'
   - '+.sitekc.com'
   - '+.siteonlinetest.com'
@@ -49204,6 +49206,7 @@ payload:
   - '+.sunboyu.com'
   - '+.suncco.com'
   - '+.sundan.com'
+  - '+.sundancebenefits.com'
   - '+.sundayrx.net'
   - '+.sundns.com'
   - '+.sundray.com'
@@ -49597,7 +49600,6 @@ payload:
   - '+.syhhidc.com'
   - '+.syhhkj.com'
   - '+.syhospital.com'
-  - '+.syhtcgf.com'
   - '+.syiptv.com'
   - '+.syitgz.com'
   - '+.syjiancai.com'
@@ -50352,6 +50354,7 @@ payload:
   - '+.tbhelper.com'
   - '+.tbhjgc.com'
   - '+.tbizk.com'
+  - '+.tbjt18.com'
   - '+.tbjtss.com'
   - '+.tbkf.net'
   - '+.tbl-import.com'
@@ -51656,7 +51659,6 @@ payload:
   - '+.tpg2i1p7.com'
   - '+.tpkey.com'
   - '+.tplife.com'
-  - '+.tplinkglobal.com'
   - '+.tplm123.com'
   - '+.tplogincn.com'
   - '+.tpooo.com'
@@ -53748,7 +53750,6 @@ payload:
   - '+.vr-game.club'
   - '+.vr186.com'
   - '+.vr42.com'
-  - '+.vr665.com'
   - '+.vralzuns.com'
   - '+.vrbeing.com'
   - '+.vrbi.viveport.com'
@@ -54102,7 +54103,6 @@ payload:
   - '+.wangle.com'
   - '+.wanglibao.com'
   - '+.wanglu.info'
-  - '+.wanglutech.com'
   - '+.wanglv.com'
   - '+.wanglv.vip'
   - '+.wangmeng.com'
@@ -54472,7 +54472,6 @@ payload:
   - '+.webshao.com'
   - '+.webshu.net'
   - '+.websjcdn.com'
-  - '+.websjy.com'
   - '+.websocket-test.com'
   - '+.websoft9.com'
   - '+.webterren.com'
@@ -54680,7 +54679,6 @@ payload:
   - '+.weishangtui.vip'
   - '+.weishangye.com'
   - '+.weishangzhonghe.com'
-  - '+.weishengka.com'
   - '+.weishi.com'
   - '+.weishi100.com'
   - '+.weishu.me'
@@ -55621,7 +55619,6 @@ payload:
   - '+.wld5.com'
   - '+.wldsb.com'
   - '+.wleye.com'
-  - '+.wlhcd.com'
   - '+.wlinfor.com'
   - '+.wljy8.com'
   - '+.wljyyjy.com'
@@ -56344,7 +56341,6 @@ payload:
   - '+.wuzhiwei.net'
   - '+.wuzhouqianzheng.com'
   - '+.wuzhuiso.com'
-  - '+.wuziya.com'
   - '+.wvidc.com'
   - '+.wvshare.com'
   - '+.ww2bbs.net'
@@ -57116,7 +57112,6 @@ payload:
   - '+.xiangpi.com'
   - '+.xiangqianpos.com'
   - '+.xiangqin7.com'
-  - '+.xiangqiushi.com'
   - '+.xiangqu.com'
   - '+.xiangrikui.co'
   - '+.xiangrikui.com'
@@ -57216,7 +57211,6 @@ payload:
   - '+.xiaocen.com'
   - '+.xiaoche001.com'
   - '+.xiaochengxucms.com'
-  - '+.xiaochiwang.org'
   - '+.xiaochuan010.com'
   - '+.xiaocifang.com'
   - '+.xiaocms.com'
@@ -57755,7 +57749,6 @@ payload:
   - '+.xingshuo.net'
   - '+.xingtai123.com'
   - '+.xingtangzp.com'
-  - '+.xingtongbo.com'
   - '+.xingtu.com'
   - '+.xinguad.com'
   - '+.xingumin.net'
@@ -62045,6 +62038,7 @@ payload:
   - '+.z7ys.com'
   - '+.z8q.cc'
   - '+.za-doctor.com'
+  - '+.zaaaap.com'
   - '+.zablog.me'
   - '+.zac1993.com'
   - '+.zackku.com'
@@ -63013,6 +63007,7 @@ payload:
   - '+.zhipin.com'
   - '+.zhipingke.com'
   - '+.zhiqiang.org'
+  - '+.zhiqiangcdn.com'
   - '+.zhiqiapp.com'
   - '+.zhiqihuo.com'
   - '+.zhiquanxia.com'
@@ -63443,6 +63438,7 @@ payload:
   - '+.zhuohuamg.com'
   - '+.zhuojie.cc'
   - '+.zhuokearts.com'
+  - '+.zhuolaoshi.net'
   - '+.zhuomogroup.com'
   - '+.zhuoquapp.com'
   - '+.zhuoqun.info'
