--- a/process.yaml
+++ b/process.yaml
@@ -80,7 +80,7 @@ payload:
   - PROCESS-NAME, com.sohu.inputmethod.sogou.xiaomi #小米搜狗输入法
   - PROCESS-NAME, com.iflytek.inputmethod.miui #小米讯飞输入法
  # 需要直连的域名
-  - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
+  # - DOMAIN-SUFFIX,xn--ngstr-lra8j.com
   # - DOMAIN-SUFFIX,googleapis.cn
   - DOMAIN-SUFFIX,injections.adguard.org
   - DOMAIN-SUFFIX,local.adguard.org
