--- a/directbak.yaml
+++ b/directbak.yaml
@@ -16401,6 +16401,7 @@ payload:
   - '+.csjplatform.com'
   - '+.csjwang.com'
   - '+.csjyzq.com'
+  - '+.cskaoyan.com'
   - '+.cskefu.com'
   - '+.cskule.com'
   - '+.cslfans.com'
