--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2,7 +2,6 @@ payload:
   - '+.0-6.com'
   - '+.00.net'
   - '+.000.link'
-  - '+.00000.host'
   - '+.00042.com'
   - '+.00058.com'
   - '+.0006266.com'
@@ -1896,8 +1895,6 @@ payload:
   - '+.2048sj.com'
   - '+.205.com'
   - '+.2080ly.com'
-  - '+.2088062.com'
-  - '+.2088063.com'
   - '+.208xs.com'
   - '+.20ju.com'
   - '+.20planet.com'
@@ -3266,6 +3263,7 @@ payload:
   - '+.40manhua.com'
   - '+.40maoaa.com'
   - '+.40mdd.com'
+  - '+.41114.cc'
   - '+.41188.com'
   - '+.411au.com'
   - '+.4124.com'
@@ -6397,7 +6395,6 @@ payload:
   - '+.91wan.com'
   - '+.91wangcai.com'
   - '+.91wangmeng.com'
-  - '+.91watches.com'
   - '+.91way.com'
   - '+.91weimai.com'
   - '+.91weimi.com'
@@ -8602,7 +8599,6 @@ payload:
   - '+.aoshitang.com'
   - '+.aoshowsh.com'
   - '+.aoshu.com'
-  - '+.aosikaimge.com'
   - '+.aosikazyimage.com'
   - '+.aosong.com'
   - '+.aosoo.com'
@@ -9075,8 +9071,6 @@ payload:
   - '+.atomhike.com'
   - '+.atomic-art.com'
   - '+.atomy.tech'
-  - '+.atool.org'
-  - '+.atool9.com'
   - '+.atoolbox.net'
   - '+.atpanel.com'
   - '+.atstudy.com'
@@ -12476,7 +12470,6 @@ payload:
   - '+.ccedpw.com'
   - '+.ccee.com'
   - '+.cceea.net'
-  - '+.ccefb.com'
   - '+.ccement.com'
   - '+.ccen.net'
   - '+.ccepc.com'
@@ -12653,7 +12646,6 @@ payload:
   - '+.ccwonline.net'
   - '+.ccwow.cc'
   - '+.ccwqtv.com'
-  - '+.ccwzz.cc'
   - '+.ccxcn.com'
   - '+.ccxcredit.com'
   - '+.ccxinyuedu.com'
@@ -14754,6 +14746,7 @@ payload:
   - '+.ciwork.net'
   - '+.cixibank.com'
   - '+.cixiedu.net'
+  - '+.cixircw.com'
   - '+.ciyew.com'
   - '+.ciyocon.com'
   - '+.ciyuan.men'
@@ -14990,6 +14983,7 @@ payload:
   - '+.cmbchina.biz'
   - '+.cmbchina.com'
   - '+.cmbchina.net'
+  - '+.cmbchinawm.com'
   - '+.cmbimg.com'
   - '+.cmbs-soft.com'
   - '+.cmbwinglungbank.com'
@@ -15709,7 +15703,6 @@ payload:
   - '+.codemart.com'
   - '+.codemm.net'
   - '+.codeok.com'
-  - '+.codepiano.com'
   - '+.codepku.com'
   - '+.codeplayer.vip'
   - '+.codeplaygames.com'
@@ -22623,7 +22616,6 @@ payload:
   - '+.g2h3.com'
   - '+.g2us.com'
   - '+.g2work.com'
-  - '+.g312.com'
   - '+.g32365.com'
   - '+.g3d.org'
   - '+.g3img.com'
@@ -22976,7 +22968,6 @@ payload:
   - '+.gda086.com'
   - '+.gdadjs.com'
   - '+.gdadri.com'
-  - '+.gdadsly.com'
   - '+.gdatacube.net'
   - '+.gdbhnk.com'
   - '+.gdbljd.com'
@@ -23573,6 +23564,7 @@ payload:
   - '+.gmilesquan.com'
   - '+.gming.org'
   - '+.gmiot.net'
+  - '+.gmit.vip'
   - '+.gmjk.com'
   - '+.gmm01.com'
   - '+.gmmch5.com'
@@ -24321,6 +24313,7 @@ payload:
   - '+.gulutea.com'
   - '+.gumang.com'
   - '+.gumaor.com'
+  - '+.gumengya.com'
   - '+.gumingnc.com'
   - '+.gumo.pro'
   - '+.gunfans.net'
@@ -24566,6 +24559,7 @@ payload:
   - '+.gy7n.com'
   - '+.gy818.com'
   - '+.gyb086.com'
+  - '+.gybcq.com'
   - '+.gycf.com'
   - '+.gycode.com'
   - '+.gydongli.com'
@@ -24669,7 +24663,6 @@ payload:
   - '+.gzj568.com'
   - '+.gzjingsha.com'
   - '+.gzjisikj.com'
-  - '+.gzjkzzp.com'
   - '+.gzjonathan.com'
   - '+.gzjpad.com'
   - '+.gzjqd.com'
@@ -26088,7 +26081,6 @@ payload:
   - '+.herdsric.com'
   - '+.here120.com'
   - '+.here325.com'
-  - '+.hereisdownload.com'
   - '+.hermesguanwang.com'
   - '+.heroad-data.com'
   - '+.heroestactics.com'
@@ -26717,7 +26709,6 @@ payload:
   - '+.hnlzhd.com'
   - '+.hnlzw.net'
   - '+.hnmdtv.com'
-  - '+.hnmeilinya.xyz'
   - '+.hnmgjr.com'
   - '+.hnmrffm888.com'
   - '+.hnmsw.com'
@@ -27767,7 +27758,6 @@ payload:
   - '+.huiqudsp.com'
   - '+.huiris.com'
   - '+.huirixiao.com'
-  - '+.huiruwei.com'
   - '+.huishangbao.com'
   - '+.huishangol.com'
   - '+.huishanjianchayuan.com'
@@ -27778,7 +27768,6 @@ payload:
   - '+.huishoushang.com'
   - '+.huishuaka.com'
   - '+.huishuang.xyz'
-  - '+.huishuofa.com'
   - '+.huisituo.com'
   - '+.huisky.com'
   - '+.huisou.com'
@@ -27827,7 +27816,6 @@ payload:
   - '+.huizhan-inc.com'
   - '+.huizhaofang.com'
   - '+.huizhek.com'
-  - '+.huizhexue.com'
   - '+.huizhijiaxun.com'
   - '+.huizhimob.com'
   - '+.huizhouf.com'
@@ -30034,7 +30022,6 @@ payload:
   - '+.isyour.love'
   - '+.it-bound.com'
   - '+.it-crazy.net'
-  - '+.it-home.org'
   - '+.it.link'
   - '+.it007.com'
   - '+.it0746.com'
@@ -30693,7 +30680,6 @@ payload:
   - '+.jdwl.com'
   - '+.jdworldwide.com'
   - '+.jdwx.info'
-  - '+.jdwxs.com'
   - '+.jdwxwz.com'
   - '+.jdxc.net'
   - '+.jdxcw.com'
@@ -32093,7 +32079,6 @@ payload:
   - '+.joyyang.com'
   - '+.jp-moco.com'
   - '+.jp.com'
-  - '+.jp14.com'
   - '+.jpanj.com'
   - '+.jpbeta.net'
   - '+.jpchinapress.com'
@@ -32500,7 +32485,6 @@ payload:
   - '+.juneyaoair.com'
   - '+.juneyaoairlines.com'
   - '+.junezx.com'
-  - '+.jungebb.com'
   - '+.junhe.com'
   - '+.juniu.tv'
   - '+.junjiahao.com'
@@ -33413,7 +33397,6 @@ payload:
   - '+.khqihuo.com'
   - '+.khs1994.com'
   - '+.khysct.com'
-  - '+.khzypic.com'
   - '+.ki-pa.com'
   - '+.kiaic.com'
   - '+.kibinggroup.com'
@@ -34571,6 +34554,7 @@ payload:
   - '+.lanuss.com'
   - '+.lanvige.com'
   - '+.lanwoncloudfilm.com'
+  - '+.lanwuzhe.com'
   - '+.lanxicy.com'
   - '+.lanxinbase.com'
   - '+.lanxiniu.com'
@@ -36388,7 +36372,6 @@ payload:
   - '+.lovfp.com'
   - '+.lovgiin.com'
   - '+.lovology.com'
-  - '+.lowsfish.com'
   - '+.loxpo.com'
   - '+.loxue.com'
   - '+.loyar.com'
@@ -37298,7 +37281,6 @@ payload:
   - '+.manongdao.com'
   - '+.manonggu.com'
   - '+.manongjc.com'
-  - '+.manongs.com'
   - '+.manongzj.com'
   - '+.manosp.com'
   - '+.manpianyi.com'
@@ -39661,6 +39643,7 @@ payload:
   - '+.nanxueqx.com'
   - '+.nanxunjob.com'
   - '+.nanyangcable.com'
+  - '+.nanyinwealth.com'
   - '+.nanyuetong.com'
   - '+.nanzhao1.com'
   - '+.naobiao.com'
@@ -39713,7 +39696,6 @@ payload:
   - '+.nb-medicalsystem.com'
   - '+.nb301.xyz'
   - '+.nb591.com'
-  - '+.nb888888.com'
   - '+.nbabm.com'
   - '+.nbahero.com'
   - '+.nbahi.com'
@@ -40234,7 +40216,6 @@ payload:
   - '+.niutoushe.com'
   - '+.niutrans.com'
   - '+.niutrip.com'
-  - '+.niutuku.com'
   - '+.niuwk.com'
   - '+.niuxgame77.com'
   - '+.niuxiao.net'
@@ -40620,7 +40601,6 @@ payload:
   - '+.nuodefund.com'
   - '+.nuoder.com'
   - '+.nuoji.com'
-  - '+.nuokui.com'
   - '+.nuomi.com'
   - '+.nuomicikoi.com'
   - '+.nuomili.com'
@@ -41468,7 +41448,6 @@ payload:
   - '+.p04e.com'
   - '+.p1.com'
   - '+.p12345.com'
-  - '+.p2220.com'
   - '+.p2cdn.com'
   - '+.p2hp.com'
   - '+.p2p.com'
@@ -48153,7 +48132,6 @@ payload:
   - '+.smartsenstech.com'
   - '+.smartsteps.com'
   - '+.smartstudy.com'
-  - '+.smartteamindia.com'
   - '+.smartwebee.com'
   - '+.smartx-cn.com'
   - '+.smartx.com'
@@ -48622,7 +48600,6 @@ payload:
   - '+.souyunku.com'
   - '+.sovell.com'
   - '+.soven.com'
-  - '+.sovxin.com'
   - '+.sowang.com'
   - '+.soweather.com'
   - '+.sowellwell.com'
@@ -48911,7 +48888,6 @@ payload:
   - '+.starsino.com'
   - '+.starsmicrosystem.com'
   - '+.starstech.cc'
-  - '+.starstopic.com'
   - '+.starswar.org'
   - '+.start.htc.com'
   - '+.start.htcsense.com'
@@ -50214,6 +50190,7 @@ payload:
   - '+.taobeirj.com'
   - '+.taobz.com'
   - '+.taoc.cc'
+  - '+.taocange.com'
   - '+.taoche.com'
   - '+.taoci.com'
   - '+.taocloudx.com'
@@ -51185,7 +51162,6 @@ payload:
   - '+.tjgangkouyiyuan.com'
   - '+.tjgcs.com'
   - '+.tjgtgd.com'
-  - '+.tjhep.com'
   - '+.tjhskj.com'
   - '+.tjhukou.com'
   - '+.tjhyzyxy.com'
@@ -52111,7 +52087,6 @@ payload:
   - '+.tulaoshi.com'
   - '+.tuliaohr.net'
   - '+.tuling123.com'
-  - '+.tulingtec.com'
   - '+.tuliren.com'
   - '+.tuliu.com'
   - '+.tumajewelry.com'
@@ -52418,7 +52393,6 @@ payload:
   - '+.tz-dsp.com'
   - '+.tz-wf.com'
   - '+.tz.app'
-  - '+.tz057610086.com'
   - '+.tz121.com'
   - '+.tz12306.com'
   - '+.tz1288.com'
@@ -52452,7 +52426,6 @@ payload:
   - '+.tzvtc.com'
   - '+.tzxingtang.com'
   - '+.tzxwzx.com'
-  - '+.tzye123.com'
   - '+.u-jingling.com'
   - '+.u-link.org'
   - '+.u-om.com'
@@ -53283,7 +53256,6 @@ payload:
   - '+.vasuwebdev.com'
   - '+.vatano.net'
   - '+.vauoo.com'
-  - '+.vbanzs.com'
   - '+.vbbobo.com'
   - '+.vbidc.com'
   - '+.vbiquge.com'
@@ -56599,6 +56571,7 @@ payload:
   - '+.x00785.com'
   - '+.x0769.com'
   - '+.x11263.com'
+  - '+.x11296.com'
   - '+.x118.net'
   - '+.x12plus.com'
   - '+.x1340.com'
@@ -63167,7 +63140,6 @@ payload:
   - '+.zhongdengwang.com'
   - '+.zhongdi168.com'
   - '+.zhongdoulicai.com'
-  - '+.zhongfenxian.com'
   - '+.zhongfu.net'
   - '+.zhongguobaiyin.com'
   - '+.zhongguoditu.com'
