--- a/directbak.yaml
+++ b/directbak.yaml
@@ -547,7 +547,6 @@ payload:
   - '+.086kd.com'
   - '+.0871gc.com'
   - '+.0890.com'
-  - '+.08946.com'
   - '+.0898.net'
   - '+.089858.com'
   - '+.0898888.com'
@@ -3054,7 +3053,6 @@ payload:
   - '+.3cvrc.com'
   - '+.3cwu.com'
   - '+.3cxg6v.com'
-  - '+.3d-modelisme.com'
   - '+.3d-stereovision.com'
   - '+.3d2000.com'
   - '+.3d56.net'
@@ -9903,7 +9901,6 @@ payload:
   - '+.bazai.com'
   - '+.bazhan.com'
   - '+.bazhou.com'
-  - '+.bazhoushi.com'
   - '+.bazhua.me'
   - '+.bazhuay.com'
   - '+.bazhuayu.cc'
@@ -12654,7 +12651,6 @@ payload:
   - '+.ccyjjd.com'
   - '+.ccyts.com'
   - '+.ccyunmai.com'
-  - '+.ccziben.com'
   - '+.cd-cxh.com'
   - '+.cd-kc.com'
   - '+.cd-sd.com'
@@ -13690,7 +13686,6 @@ payload:
   - '+.china-tower.com'
   - '+.china-toy-edu.org'
   - '+.china-toy-expo.com'
-  - '+.china-twofoundation.com'
   - '+.china-up.com'
   - '+.china-vcom.com'
   - '+.china-vision.org'
@@ -14531,7 +14526,6 @@ payload:
   - '+.chunhingplasticbags.com'
   - '+.chunhui12.com'
   - '+.chunjingtech.com'
-  - '+.chunjiws.com'
   - '+.chunmi.com'
   - '+.chunmiaosh.com'
   - '+.chunqiuwang.com'
@@ -15024,7 +15018,6 @@ payload:
   - '+.cmjz.net'
   - '+.cmljs.org'
   - '+.cmmim.com'
-  - '+.cmnet-speed.com'
   - '+.cmnxt.com'
   - '+.cmoct.com'
   - '+.cmodel.com'
@@ -16293,7 +16286,6 @@ payload:
   - '+.crmeb.com'
   - '+.crmeb.net'
   - '+.crmg-ms.com'
-  - '+.crmgz.com'
   - '+.crmip.com'
   - '+.crmtldc.net'
   - '+.crnews.net'
@@ -17373,7 +17365,6 @@ payload:
   - '+.daxueshi.com'
   - '+.daxuesoutijiang.com'
   - '+.daxuesushe.com'
-  - '+.daxuewa.com'
   - '+.daxuewang.com'
   - '+.dayaguqin.com'
   - '+.dayangmotorcycle.com'
@@ -20395,7 +20386,6 @@ payload:
   - '+.eol8.com'
   - '+.eolinker.com'
   - '+.eomoy.com'
-  - '+.eoncon.com'
   - '+.eonun.com'
   - '+.eooioo.com'
   - '+.eoopoo.com'
@@ -20545,6 +20535,7 @@ payload:
   - '+.esensoft.com'
   - '+.esfimg.com'
   - '+.eshangle.com'
+  - '+.esheep.com'
   - '+.eshenlin.com'
   - '+.eshimin.com'
   - '+.eshiyun.info'
@@ -23218,7 +23209,6 @@ payload:
   - '+.getcn.net'
   - '+.gethover.com'
   - '+.getiis.com'
-  - '+.getinshapes.com'
   - '+.getiot.tech'
   - '+.getip.name'
   - '+.getkwai.com'
@@ -23827,6 +23817,7 @@ payload:
   - '+.gooyo.com'
   - '+.goozp.com'
   - '+.gopedu.com'
+  - '+.gopeed.com'
   - '+.goplaycn.com'
   - '+.goplayervideo.com'
   - '+.gorichox.com'
@@ -30358,6 +30349,7 @@ payload:
   - '+.ixueyi.com'
   - '+.ixunke.com'
   - '+.iy51.com'
+  - '+.iyangxi.com'
   - '+.iyaou.com'
   - '+.iyaxi.com'
   - '+.iyaxin.com'
@@ -32644,6 +32636,7 @@ payload:
   - '+.jxage.com'
   - '+.jxal.net'
   - '+.jxbhwl.com'
+  - '+.jxbscbd.com'
   - '+.jxc4.com'
   - '+.jxcaipu.com'
   - '+.jxcb.net'
@@ -33317,7 +33310,6 @@ payload:
   - '+.keruyun.com'
   - '+.keruyun.net'
   - '+.kesci.com'
-  - '+.kesense.com'
   - '+.keshizhongguo.com'
   - '+.kesion.com'
   - '+.kesiyunlai.com'
@@ -35256,7 +35248,6 @@ payload:
   - '+.liangongshequ.com'
   - '+.liangpinriyu.com'
   - '+.liangqikeji.com'
-  - '+.liangshangou.com'
   - '+.liangshunet.com'
   - '+.liangxinyao.com'
   - '+.liangxiongdi.com'
@@ -36155,7 +36146,6 @@ payload:
   - '+.loliloli.moe'
   - '+.loliloli.net'
   - '+.lolitawardrobe.com'
-  - '+.loliyun.vip'
   - '+.loljy.com'
   - '+.lolkeng.com'
   - '+.lollipopo.com'
@@ -36737,7 +36727,6 @@ payload:
   - '+.lvyestudy.com'
   - '+.lvyetong.com'
   - '+.lvyidoor.com'
-  - '+.lvyou114.com'
   - '+.lvyou521.com'
   - '+.lvyoubei.com'
   - '+.lvyougl.com'
@@ -37533,7 +37522,6 @@ payload:
   - '+.mcearnmore.com'
   - '+.mcfsji.com'
   - '+.mcfun.tv'
-  - '+.mcfuzhu.net'
   - '+.mchat.com'
   - '+.mchifi.com'
   - '+.mcidc.net'
@@ -39277,6 +39265,7 @@ payload:
   - '+.myantu.com'
   - '+.myapks.com'
   - '+.myapp.com'
+  - '+.myapp.ltd'
   - '+.myaqsh.com'
   - '+.myarowanas.com'
   - '+.myauth.us'
@@ -39656,7 +39645,6 @@ payload:
   - '+.naradafoundation.org'
   - '+.narkii.com'
   - '+.narrowad.com'
-  - '+.narrowhips.com'
   - '+.naruto.red'
   - '+.narutom.com'
   - '+.nas66.com'
@@ -39927,6 +39915,7 @@ payload:
   - '+.newbeebook.com'
   - '+.newbmiao.com'
   - '+.newbolunesport.com'
+  - '+.newbook8.com'
   - '+.newboshi.com'
   - '+.newcapec.net'
   - '+.newcger.com'
@@ -40856,7 +40845,6 @@ payload:
   - '+.oicq88.com'
   - '+.oicto.com'
   - '+.oidchina.org'
-  - '+.oigps.com'
   - '+.oiine.com'
   - '+.oilchem.net'
   - '+.oilepay.com'
@@ -43416,7 +43404,6 @@ payload:
   - '+.qidisheng.com'
   - '+.qidisheng.net'
   - '+.qidiwang.com'
-  - '+.qidong.co'
   - '+.qidong.name'
   - '+.qidongyx.com'
   - '+.qidou.com'
@@ -44706,7 +44693,6 @@ payload:
   - '+.rdwork.com'
   - '+.rdxmt.com'
   - '+.rdyjs.com'
-  - '+.rdzhijia.com'
   - '+.rdzjw.com'
   - '+.rdzs.com'
   - '+.rdzx.net'
@@ -49066,7 +49052,6 @@ payload:
   - '+.sucai.com'
   - '+.sucaibar.com'
   - '+.sucaidao.com'
-  - '+.sucaifengbao.com'
   - '+.sucaifu.com'
   - '+.sucaihuo.com'
   - '+.sucaijishi.com'
@@ -49354,7 +49339,6 @@ payload:
   - '+.sutune.me'
   - '+.suuuwsj9.xyz'
   - '+.suv666.com'
-  - '+.suxiadan.com'
   - '+.suxiazai.com'
   - '+.suxieban.com'
   - '+.suxiege.com'
@@ -50235,6 +50219,7 @@ payload:
   - '+.taokezhushou.com'
   - '+.taokouling.com'
   - '+.taoku.com'
+  - '+.taolinks.cc'
   - '+.taoluzhibo56.com'
   - '+.taolvtong.com'
   - '+.taolx.com'
@@ -52703,7 +52688,6 @@ payload:
   - '+.ukubang.com'
   - '+.ukui.org'
   - '+.ukulelecn.com'
-  - '+.ulandian.com'
   - '+.ulaojiu.com'
   - '+.ule.com'
   - '+.ule.hk'
@@ -56362,7 +56346,6 @@ payload:
   - '+.www.samsung.com'
   - '+.www.st.com'
   - '+.www.thinkpad.com'
-  - '+.www.tutorabc.com'
   - '+.www.tzoo-img.com'
   - '+.www.vive.com'
   - '+.www.viveport.com'
@@ -56584,6 +56567,7 @@ payload:
   - '+.x23us.us'
   - '+.x23wxw.com'
   - '+.x315.com'
+  - '+.x3322.net'
   - '+.x3366.com'
   - '+.x3china.com'
   - '+.x3cn.com'
@@ -56680,7 +56664,6 @@ payload:
   - '+.xawbb.com'
   - '+.xawdz.com'
   - '+.xawhz.com'
-  - '+.xaxing05.com'
   - '+.xaxinghuo.com'
   - '+.xaxydr.com'
   - '+.xayestar.com'
@@ -61493,7 +61476,6 @@ payload:
   - '+.yunhetong.com'
   - '+.yunhou.com'
   - '+.yunhuasheji.com'
-  - '+.yunhucdn.com'
   - '+.yunhulu.org'
   - '+.yunhuotong.net'
   - '+.yunhuzx.com'
