--- a/directbak.yaml
+++ b/directbak.yaml
@@ -314,7 +314,6 @@ payload:
   - '+.0527ys.com'
   - '+.0527zz.com'
   - '+.052yx.com'
-  - '+.0531-jinan.com'
   - '+.0531.com'
   - '+.053135.com'
   - '+.0531jb.com'
@@ -1416,7 +1415,6 @@ payload:
   - '+.1772.site'
   - '+.1773.com'
   - '+.1778.com'
-  - '+.177817.com'
   - '+.178.com'
   - '+.178198.com'
   - '+.178448.com'
@@ -9906,7 +9904,6 @@ payload:
   - '+.bb-game.com'
   - '+.bb-pco.com'
   - '+.bb06.com'
-  - '+.bb179.com'
   - '+.bb778899bb.com'
   - '+.bb8gk.com'
   - '+.bbam58.com'
@@ -13322,7 +13319,6 @@ payload:
   - '+.chazhaokan.com'
   - '+.chazhengla.com'
   - '+.chazidian.com'
-  - '+.chazishop.com'
   - '+.chaziyu.com'
   - '+.chazuo.com'
   - '+.chazuo.net'
@@ -14641,6 +14637,7 @@ payload:
   - '+.cimamotor.com'
   - '+.cimc.com'
   - '+.cimen.club'
+  - '+.cimictiles.com'
   - '+.ciming-bj.com'
   - '+.ciming-shop.com'
   - '+.ciming.com'
@@ -15315,7 +15312,6 @@ payload:
   - '+.cnhwjt.com'
   - '+.cnhzz.com'
   - '+.cniao5.com'
-  - '+.cniao8.com'
   - '+.cnibx.com'
   - '+.cnicif.com'
   - '+.cnidea.net'
@@ -19409,6 +19405,7 @@ payload:
   - '+.dytt7899.com'
   - '+.dytt8.com'
   - '+.dytt8.net'
+  - '+.dyxf365.com'
   - '+.dyxldjy.com'
   - '+.dyxsdwm.com'
   - '+.dyxtw.com'
@@ -21666,7 +21663,6 @@ payload:
   - '+.fibodata.com'
   - '+.fibrlink.net'
   - '+.ficochina.net'
-  - '+.fidding.me'
   - '+.fiehff.com'
   - '+.fieldschina.com'
   - '+.fifo.cc'
@@ -27492,6 +27488,7 @@ payload:
   - '+.huaqidigital.com'
   - '+.huaqin.com'
   - '+.huaqinchi.com'
+  - '+.huaqiu.com'
   - '+.huaranhunsha.com'
   - '+.huaraytech.com'
   - '+.huarenyizhan.com'
@@ -27665,7 +27662,6 @@ payload:
   - '+.hui712.com'
   - '+.hui800.com'
   - '+.hui800.net'
-  - '+.huianchougy.com'
   - '+.huians.com'
   - '+.huibo.com'
   - '+.huicaishui.net'
@@ -29025,6 +29021,7 @@ payload:
   - '+.igreatdream.com'
   - '+.igtm-a101.com'
   - '+.igtm-b101.com'
+  - '+.igtm-meeting-tencent.com'
   - '+.iguanyu.com'
   - '+.iguazutraffic.xyz'
   - '+.iguder.com'
@@ -29219,6 +29216,7 @@ payload:
   - '+.ikunac.com'
   - '+.ikx.me'
   - '+.ikyy.cc'
+  - '+.ikzybf.com'
   - '+.il8r.com'
   - '+.ilab-x.com'
   - '+.ilabilab.com'
@@ -34863,7 +34861,6 @@ payload:
   - '+.ledianyun.com'
   - '+.lediaocha.com'
   - '+.ledo.com'
-  - '+.ledole.com'
   - '+.ledouwan.com'
   - '+.ledouya.com'
   - '+.ledsdk.com'
@@ -35137,7 +35134,6 @@ payload:
   - '+.lezhi.com'
   - '+.lezhi99.com'
   - '+.lezhibo.com'
-  - '+.lezhieducation.com'
   - '+.lezhiot.com'
   - '+.lezhiyun.com'
   - '+.lezhuan.com'
@@ -35246,6 +35242,7 @@ payload:
   - '+.liangyadong.com'
   - '+.liangyi.com'
   - '+.liangzhishu.com'
+  - '+.liangzuji.com'
   - '+.lianhaikeji.com'
   - '+.lianhanghao.com'
   - '+.lianhecang.com'
@@ -38785,6 +38782,7 @@ payload:
   - '+.moolsun.com'
   - '+.moomoo.com'
   - '+.moonbasa.com'
+  - '+.moonbitlang.com'
   - '+.mooncell.wiki'
   - '+.moonfly.net'
   - '+.mooninbox.com'
@@ -41274,7 +41272,6 @@ payload:
   - '+.ottffss.net'
   - '+.ottshopping.net'
   - '+.otype.com'
-  - '+.otzyx.com'
   - '+.ou99.com'
   - '+.ouapi.com'
   - '+.oubk.com'
@@ -43021,7 +43018,6 @@ payload:
   - '+.qd-metro.com'
   - '+.qd-weimob.com'
   - '+.qd256.com'
-  - '+.qd315.net'
   - '+.qdac.cc'
   - '+.qdaeon.com'
   - '+.qdaiduo.com'
@@ -45727,7 +45723,6 @@ payload:
   - '+.sasseur.com'
   - '+.satrip.com'
   - '+.saturnbird.com'
-  - '+.saveen.com'
   - '+.savokiss.com'
   - '+.savouer.com'
   - '+.sawenow.com'
@@ -47809,7 +47804,6 @@ payload:
   - '+.sishuok.com'
   - '+.sishuxuefu.com'
   - '+.sisijiyi.com'
-  - '+.sisijp.com'
   - '+.sisjava.com'
   - '+.sisp-china.com'
   - '+.sistemsol.com'
@@ -54895,7 +54889,6 @@ payload:
   - '+.weplus.com'
   - '+.weplus.me'
   - '+.werewolf.online'
-  - '+.wesafesoft.com'
   - '+.wesai.com'
   - '+.wesane.com'
   - '+.wesdom.me'
@@ -55271,7 +55264,6 @@ payload:
   - '+.whyungu.com'
   - '+.whyyy.com'
   - '+.whzb.com'
-  - '+.whzblawson.com'
   - '+.whzbtb.com'
   - '+.whzc2008.com'
   - '+.whzdyy.com'
@@ -55299,7 +55291,6 @@ payload:
   - '+.widuu.com'
   - '+.wifenxiao.com'
   - '+.wifi.com'
-  - '+.wifi03.com'
   - '+.wifi0917.com'
   - '+.wifi188.com'
   - '+.wifi33.com'
@@ -57381,7 +57372,6 @@ payload:
   - '+.xiaowang.net'
   - '+.xiaowangshen.com'
   - '+.xiaowangyun.com'
-  - '+.xiaowanzhou.net'
   - '+.xiaowazi.com'
   - '+.xiaoweigod.com'
   - '+.xiaoweirobot.com'
@@ -59118,7 +59108,6 @@ payload:
   - '+.yameijie.com'
   - '+.yameisj.com'
   - '+.yamibo.com'
-  - '+.yan-wei.net'
   - '+.yanbinghu.com'
   - '+.yanbm.com'
   - '+.yanboguoji.com'
@@ -59970,6 +59959,7 @@ payload:
   - '+.yingpaigame.com'
   - '+.yingshe.com'
   - '+.yingsheng.com'
+  - '+.yingshevip.com'
   - '+.yingshixiaoshuo.com'
   - '+.yingshiyou.com'
   - '+.yingsoo.com'
@@ -61656,7 +61646,6 @@ payload:
   - '+.yuxiaor.com'
   - '+.yuxinews.com'
   - '+.yuxingqiu.com'
-  - '+.yuxinzhilian.com'
   - '+.yuxip.com'
   - '+.yuxitech.com'
   - '+.yuxungs.com'
