--- a/directbak.yaml
+++ b/directbak.yaml
@@ -808,7 +808,6 @@ payload:
   - '+.110ask.com'
   - '+.110hack.com'
   - '+.110tm.com'
-  - '+.110zhibo.com'
   - '+.111036.com'
   - '+.111111111.com'
   - '+.1111191.com'
@@ -5109,6 +5108,7 @@ payload:
   - '+.66house.com'
   - '+.66ip.com'
   - '+.66jiedai.com'
+  - '+.66mi.com'
   - '+.66mobi.com'
   - '+.66money.com'
   - '+.66mz8.com'
@@ -9025,6 +9025,7 @@ payload:
   - '+.asussz-zp.com'
   - '+.aswetalk.net'
   - '+.asyzonline.com'
+  - '+.aszvip.com'
   - '+.at-siac.com'
   - '+.at0086.com'
   - '+.at0086.net'
@@ -10221,7 +10222,6 @@ payload:
   - '+.benduo.net'
   - '+.benellimotor.com'
   - '+.bengbeng.com'
-  - '+.bengchedaquan.com'
   - '+.bengden.com'
   - '+.bengfa.biz'
   - '+.benghuai.com'
@@ -11380,7 +11380,6 @@ payload:
   - '+.boohee.com'
   - '+.book118.com'
   - '+.book1234.com'
-  - '+.bookabc.cc'
   - '+.bookask.com'
   - '+.bookdao.com'
   - '+.bookdown.net'
@@ -12431,7 +12430,6 @@ payload:
   - '+.ccbwfs.com'
   - '+.cccaq.com'
   - '+.cccbs.net'
-  - '+.ccccl.net'
   - '+.cccdun.com'
   - '+.cccf-cloud.com'
   - '+.ccchz.com'
@@ -14123,7 +14121,6 @@ payload:
   - '+.chinatai.com'
   - '+.chinatairun.com'
   - '+.chinatalent.org'
-  - '+.chinatarena.com'
   - '+.chinatat.com'
   - '+.chinatechinsights.com'
   - '+.chinatelecom-ec.com'
@@ -15464,6 +15461,7 @@ payload:
   - '+.cnpubg.com'
   - '+.cnpusi.com'
   - '+.cnpv.com'
+  - '+.cnpx.net'
   - '+.cnpython.com'
   - '+.cnpythoner.com'
   - '+.cnqc.com'
@@ -18026,6 +18024,7 @@ payload:
   - '+.dianzhentan.com'
   - '+.dianzhi.com'
   - '+.dianziaihaozhe.com'
+  - '+.dianzihetong.net'
   - '+.dianzixuexi.com'
   - '+.diaoben.com'
   - '+.diaochapai.com'
@@ -20315,6 +20314,7 @@ payload:
   - '+.eng24.com'
   - '+.eng888.com'
   - '+.engeniustec.com'
+  - '+.englishgoai.com'
   - '+.englishtownpromotion.com'
   - '+.engloncar.com'
   - '+.engpx.com'
@@ -22802,7 +22802,6 @@ payload:
   - '+.gaogulou.com'
   - '+.gaohaipeng.com'
   - '+.gaohangip.com'
-  - '+.gaohbook.net'
   - '+.gaohr.com'
   - '+.gaoimg.com'
   - '+.gaoji.ren'
@@ -23986,7 +23985,6 @@ payload:
   - '+.grirem.com'
   - '+.grizcom.com'
   - '+.grmxdy.com'
-  - '+.gro2004.com'
   - '+.groad.net'
   - '+.groovyfilmes.com'
   - '+.grouk.com'
@@ -29913,7 +29911,6 @@ payload:
   - '+.ishangtong.com'
   - '+.ishangtu.com'
   - '+.ishangu.com'
-  - '+.ishangzu.com'
   - '+.ishanshan.com'
   - '+.ishansong.com'
   - '+.ishaohuang.com'
@@ -30292,6 +30289,7 @@ payload:
   - '+.iwncomm.com'
   - '+.iwopop.com'
   - '+.iwordnet.com'
+  - '+.iwordshow.com'
   - '+.iworm.net'
   - '+.iwpai.com'
   - '+.iwshang.com'
@@ -31056,6 +31054,7 @@ payload:
   - '+.jiashuangkuaizi.com'
   - '+.jiashule.com'
   - '+.jiasn.com'
+  - '+.jiasu.work'
   - '+.jiasuba.com'
   - '+.jiasubook.com'
   - '+.jiasudu666.com'
@@ -31590,7 +31589,6 @@ payload:
   - '+.jiudianjiu.com'
   - '+.jiudianyongpin.com'
   - '+.jiudingcapital.com'
-  - '+.jiudingdalv.com'
   - '+.jiufawang.com'
   - '+.jiugang.com'
   - '+.jiugangbid.com'
@@ -33381,7 +33379,6 @@ payload:
   - '+.kiaic.com'
   - '+.kibinggroup.com'
   - '+.kibo.tech'
-  - '+.kickasssmp3.com'
   - '+.kid17.com'
   - '+.kidscoding8.com'
   - '+.kidsdown.com'
@@ -35800,7 +35797,6 @@ payload:
   - '+.liulianglf.com'
   - '+.liuliangzu.com'
   - '+.liulianqi123.com'
-  - '+.liulianyu.com'
   - '+.liuliguo.com'
   - '+.liulin.cc'
   - '+.liulishuo.com'
@@ -36314,7 +36310,6 @@ payload:
   - '+.louyue.com'
   - '+.lovcuty.com'
   - '+.love.tv'
-  - '+.love1992.com'
   - '+.love21cn.com'
   - '+.love3721.com'
   - '+.love616.com'
@@ -39117,6 +39112,7 @@ payload:
   - '+.mupmstx.com'
   - '+.murdermysterypa.com'
   - '+.murl.tv'
+  - '+.murphysec.com'
   - '+.muryi.net'
   - '+.muselab-tech.com'
   - '+.mushafa.net'
@@ -43463,6 +43459,7 @@ payload:
   - '+.qiling.org'
   - '+.qilingames.com'
   - '+.qilinxuan.net'
+  - '+.qilitech.ltd'
   - '+.qilong.com'
   - '+.qilongtan.com'
   - '+.qiluhospital.com'
@@ -43720,7 +43717,6 @@ payload:
   - '+.qiwendi.com'
   - '+.qiwenhui.com'
   - '+.qixia.ltd'
-  - '+.qixiandoc.com'
   - '+.qixin.com'
   - '+.qixin007.com'
   - '+.qixin18.com'
@@ -48964,7 +48960,6 @@ payload:
   - '+.stoyard.com'
   - '+.str-mo.com'
   - '+.straitchain.com'
-  - '+.strconv.com'
   - '+.strcpy.me'
   - '+.streamaxtech.com'
   - '+.streamcomputing.com'
@@ -49394,7 +49389,6 @@ payload:
   - '+.swordofmorning.com'
   - '+.swordtt.com'
   - '+.swotbbs.com'
-  - '+.swothouse.com'
   - '+.swsbw.com'
   - '+.swsm.net'
   - '+.swsmu.com'
@@ -49447,7 +49441,6 @@ payload:
   - '+.sxjh88.com'
   - '+.sxjhzsgc.com'
   - '+.sxjlzhifu.com'
-  - '+.sxjtzj.com'
   - '+.sxjzxww.com'
   - '+.sxkzxt.com'
   - '+.sxlcdn.com'
@@ -52795,7 +52788,6 @@ payload:
   - '+.unitek-it.com'
   - '+.uniteyun.com'
   - '+.unitop-apex.com'
-  - '+.unity3d8.com'
   - '+.unitymanual.com'
   - '+.uniview.com'
   - '+.uniworldart.com'
@@ -53643,6 +53635,7 @@ payload:
   - '+.vortexfun.com'
   - '+.vote8.cc'
   - '+.vote8.com'
+  - '+.voycn.com'
   - '+.voyooo.com'
   - '+.vp3u.com'
   - '+.vpadn.com'
@@ -54343,7 +54336,6 @@ payload:
   - '+.we.dji.com'
   - '+.we1130.com'
   - '+.we123.com'
-  - '+.we12306.com'
   - '+.we2.name'
   - '+.we2marry.com'
   - '+.we4399.com'
@@ -54479,7 +54471,6 @@ payload:
   - '+.wei6.com'
   - '+.weiao.online'
   - '+.weiba66.com'
-  - '+.weibaiyue.com'
   - '+.weibaji.com'
   - '+.weibanan.com'
   - '+.weibangong.com'
@@ -54532,7 +54523,6 @@ payload:
   - '+.weihai.tv'
   - '+.weihaicollege.com'
   - '+.weihaipoly.com'
-  - '+.weihanli.xyz'
   - '+.weihaobang.com'
   - '+.weihaoyi.com'
   - '+.weihua2.com'
@@ -56740,7 +56730,6 @@ payload:
   - '+.xcmh.cc'
   - '+.xcn457.com'
   - '+.xcnchinese.com'
-  - '+.xcnte.com'
   - '+.xcode.me'
   - '+.xcoder.in'
   - '+.xcommon.com'
@@ -57259,6 +57248,7 @@ payload:
   - '+.xiaoliangkou.com'
   - '+.xiaoliebian.com'
   - '+.xiaolin.in'
+  - '+.xiaolincoding.com'
   - '+.xiaolinsi.com'
   - '+.xiaolinwl.com'
   - '+.xiaoliqing.net'
@@ -60241,7 +60231,6 @@ payload:
   - '+.yiyuetop.com'
   - '+.yiyum.com'
   - '+.yiyurumen.com'
-  - '+.yizeijun.com'
   - '+.yizenb.com'
   - '+.yizhanzx.com'
   - '+.yizhema.com'
@@ -61752,7 +61741,6 @@ payload:
   - '+.yxinbao.com'
   - '+.yxit.net'
   - '+.yxixy.com'
-  - '+.yxjcy.xyz'
   - '+.yxjedu02.com'
   - '+.yxjia.com'
   - '+.yxkfw.com'
@@ -63544,7 +63532,6 @@ payload:
   - '+.zishahuyu.com'
   - '+.zishapot.com'
   - '+.zishuo.com'
-  - '+.zishuogif.com'
   - '+.zishuovideo.com'
   - '+.zisia.org'
   - '+.zisuo.com'
